# lmstudio-local-llm-blueprint

./: Cargo.toml  Dockerfile  README.md
.cursor/rules/: blueprints.mdc
lmstudio-local-llm-bin/: Cargo.toml  build.rs
lmstudio-local-llm-bin/src/: main.rs
lmstudio-local-llm-lib/: Cargo.toml
lmstudio-local-llm-lib/src/: context.rs  error.rs  lib.rs
lmstudio-local-llm-lib/src/jobs/: list.rs  load.rs  mod.rs  server.rs  status.rs  unload.rs
lmstudio-local-llm-lib/tests/: e2e.rs
