[workspace]
resolver = "2"
members = ["lmstudio-local-llm-lib", "lmstudio-local-llm-bin"]

[workspace.package]
version = "0.1.0"
description = "A Tangle Blueprint for running a local LLM infra using lmstudio"
edition = "2024"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/lmstudio-local-llm"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
lmstudio-local-llm-blueprint-lib = { path = "lmstudio-local-llm-lib" }

blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", default-features = false }
tokio = { version = "1.44.2", default-features = false }
color-eyre = "0.6.3"
tower = { version = "0.5.2", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
dirs = { version = "6.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { version = "34.0.0", default-features = false }
thiserror = "1.0"
dotenv = "0.15"
futures = "0.3"
which = "6.0"
