[package]
name = "lmstudio-local-llm-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync"] }
dirs = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sp-core = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["std", "testing", "tangle"] }
tokio = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }

[package.metadata.blueprint]
manager = { Evm = "ExperimentalBlueprint" }
master_revision = "Latest"
